tests/errors/named_arg_mixed_with_positional.ptt
// Mixing named and positional arguments in the same call must be a
// compile error. The rule is all-or-nothing.

Point is {
  x int
  y int
}

spark {
  p is Point(1, y is 2)
  yell(p.x)
}
